--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,6 +20,7 @@ file.reference.Aerith-src=src
 file.reference.flickrapi-1.0a9.jar=lib/flickrapi-1.0a9.jar
 file.reference.fuse-core.jar=lib/fuse-core.jar
 file.reference.fuse-swing.jar=lib/fuse-swing.jar
+file.reference.JXMapViewer.jar=lib/JXMapViewer.jar
 file.reference.swing-layout-1.0.jar=lib/swing-layout-1.0.jar
 file.reference.TimingFramework.jar=lib/TimingFramework.jar
 file.reference.twinkle.jar=lib/twinkle.jar
@@ -36,7 +37,8 @@ javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.jl1.0.jar}:\
     ${file.reference.jogl.jar}:\
-    ${reference.swingx.jar}
+    ${reference.swingx.jar}:\
+    ${file.reference.JXMapViewer.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
