added twinkle code

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -23,7 +23,6 @@ file.reference.fuse-swing.jar=lib/fuse-swing.jar
 file.reference.JXMapViewer.jar=lib/JXMapViewer.jar
 file.reference.swing-layout-1.0.jar=lib/swing-layout-1.0.jar
 file.reference.TimingFramework.jar=lib/TimingFramework.jar
-file.reference.twinkle.jar=lib/twinkle.jar
 file.reference.vecmath.jar=lib/vecmath.jar
 jar.compress=false
 javac.classpath=\
@@ -33,7 +32,6 @@ javac.classpath=\
     ${file.reference.TimingFramework.jar}:\
     ${file.reference.vecmath.jar}:\
     ${file.reference.swing-layout-1.0.jar}:\
-    ${file.reference.twinkle.jar}:\
     ${libs.swing-layout.classpath}:\
     ${file.reference.jl1.0.jar}:\
     ${file.reference.jogl.jar}:\
@@ -76,3 +74,4 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 src.dir=${file.reference.Aerith-src}
+src.src-twinkle.dir=src-twinkle
