--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,6 +22,7 @@ file.reference.fuse-core.jar=lib/fuse-core.jar
 file.reference.fuse-swing.jar=lib/fuse-swing.jar
 file.reference.JXMapViewer.jar=lib/JXMapViewer.jar
 file.reference.swing-layout-1.0.jar=lib/swing-layout-1.0.jar
+file.reference.swingx-jxpanel-0.8.jar=lib/swingx-jxpanel-0.8.jar
 file.reference.TimingFramework.jar=lib/TimingFramework.jar
 file.reference.vecmath.jar=lib/vecmath.jar
 jar.compress=false
@@ -32,11 +33,10 @@ javac.classpath=\
     ${file.reference.TimingFramework.jar}:\
     ${file.reference.vecmath.jar}:\
     ${file.reference.swing-layout-1.0.jar}:\
-    ${libs.swing-layout.classpath}:\
     ${file.reference.jl1.0.jar}:\
+    ${file.reference.JXMapViewer.jar}:\
     ${file.reference.jogl.jar}:\
-    ${reference.swingx.jar}:\
-    ${file.reference.JXMapViewer.jar}
+    ${file.reference.swingx-jxpanel-0.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,8 +61,6 @@ main.class=com.sun.javaone.aerith.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=Java_HotSpot_TM__Client_VM_1.6.0-b82-6-release
-project.swingx=../swingx
-reference.swingx.jar=${project.swingx}/dist/swingx.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
