Fixed NB project file

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,6 +20,7 @@ file.reference.Aerith-src=src
 file.reference.flickrapi-1.0a9.jar=lib/flickrapi-1.0a9.jar
 file.reference.fuse-core.jar=lib/fuse-core.jar
 file.reference.fuse-swing.jar=lib/fuse-swing.jar
+file.reference.jl1.0.jar=../../Documents/Work In Progress/java/projects/aerith/Aerith/lib/jl1.0.jar
 file.reference.JXMapViewer.jar=lib/JXMapViewer.jar
 file.reference.swing-layout-1.0.jar=lib/swing-layout-1.0.jar
 file.reference.swingx-jxpanel-0.8.jar=lib/swingx-jxpanel-0.8.jar
@@ -34,14 +35,14 @@ javac.classpath=\
     ${file.reference.vecmath.jar}:\
     ${file.reference.swing-layout-1.0.jar}:\
     ${file.reference.jl1.0.jar}:\
+    ${file.reference.jl1.0.jar}:\
     ${file.reference.JXMapViewer.jar}:\
-    ${file.reference.jogl.jar}:\
     ${file.reference.swingx-jxpanel-0.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -60,7 +61,7 @@ javadoc.windowtitle=
 main.class=com.sun.javaone.aerith.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=Java_HotSpot_TM__Client_VM_1.6.0-b82-6-release
+platform.active=Java_SE
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
