--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,26 +18,27 @@ dist.jar=${dist.dir}/Aerith.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 file.reference.Aerith-src=src
 file.reference.flickrapi-1.0a9.jar=lib/flickrapi-1.0a9.jar
-file.reference.fuse-core.jar=lib/fuse-core.jar
-file.reference.fuse-swing.jar=lib/fuse-swing.jar
-file.reference.jl1.0.jar=../../Documents/Work In Progress/java/projects/aerith/Aerith/lib/jl1.0.jar
+file.reference.fuse-core-0.3.jar=lib/fuse-core-0.3.jar
+file.reference.fuse-swing-0.3.jar=lib/fuse-swing-0.3.jar
+file.reference.jl1.0.jar=lib/jl1.0.jar
 file.reference.JXMapViewer.jar=lib/JXMapViewer.jar
 file.reference.swing-layout-1.0.jar=lib/swing-layout-1.0.jar
 file.reference.swingx-jxpanel-0.8.jar=lib/swingx-jxpanel-0.8.jar
-file.reference.TimingFramework.jar=lib/TimingFramework.jar
+file.reference.TimingFramework-0.54.jar=lib/TimingFramework-0.54.jar
 file.reference.vecmath.jar=lib/vecmath.jar
 jar.compress=false
 javac.classpath=\
     ${file.reference.flickrapi-1.0a9.jar}:\
-    ${file.reference.fuse-core.jar}:\
-    ${file.reference.fuse-swing.jar}:\
-    ${file.reference.TimingFramework.jar}:\
     ${file.reference.vecmath.jar}:\
+    ${file.reference.fuse-core-0.3.jar}:\
+    ${file.reference.fuse-swing-0.3.jar}:\
+    ${file.reference.TimingFramework-0.54.jar}:\
     ${file.reference.swing-layout-1.0.jar}:\
-    ${file.reference.jl1.0.jar}:\
-    ${file.reference.jl1.0.jar}:\
     ${file.reference.JXMapViewer.jar}:\
-    ${file.reference.swingx-jxpanel-0.8.jar}
+    ${file.reference.jl1.0.jar}:\
+    ${file.reference.swingx-jxpanel-0.8.jar}:\
+    ${libs.JOGL.classpath}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,10 +59,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+# Property libs.JOGL.classpath is set here just to make sharing of project simpler.
+# The library definition has always preference over this property.
+libs.JOGL.classpath=../../../java/jogl/1.1.0-rc3/lib/gluegen-rt.jar;../../../java/jogl/1.1.0-rc3/lib/jogl.jar
 main.class=com.sun.javaone.aerith.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=Java_SE
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
