fixed a bug in the rollover animation

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,8 +37,8 @@ javac.classpath=\
     ${file.reference.JXMapViewer.jar}:\
     ${file.reference.jl1.0.jar}:\
     ${file.reference.swingx-jxpanel-0.8.jar}:\
-    ${libs.JOGL.classpath}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${libs.JOGL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
